[package]
name = "traits"
version = "0.1.0"
authors = ["Raymundo Vásquez Ruiz <raymundo.vr@protonmail.com>"]
edition = "2018"

[lib]
name = "traitslib"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "traitsbin"
path = "src/bin.rs"
